# cuda_demos

./: CMakeLists.txt  README.md  build.sh
cuda_stream/: CMakeLists.txt  cuda_stream.cu
cuda_stream_communication/: stream_communication.py
dot_product/: CMakeLists.txt  dot_product.cpp  dot_product_kernel.cu  dot_product_kernel.cuh
query_cuda_devices/: CMakeLists.txt  query_cuda_engine.cu
reduce/: CMakeLists.txt  Makefile  block_reduce.cpp  block_reduce.cu  block_reduce.cuh  reduce.cpp
softmax/: CMakeLists.txt  softmax.cpp  softmax_kernel.cu  softmax_kernel.cuh
